# LHL

./: .dockerignore  .gitignore  CoqMakefile.conf  Dockerfile  LHL.opam  LICENSE  Makefile.conf  Paper.v  README.md  Scratch.v  _CoqProject  build.sh  contains_bind.tx  dune-project
Core/: Compose.v  Eutt.v  EuttRefinesSetup.v  Interaction.v  LinFacts.v  Linearizability.v  Logic.v  LogicFacts.v  LogicPaco.v  LogicTactics.v  Program.v  ProgramFacts.v  ProgramRules.v  Refinement.v  RefinesFacts.v  Scratch.v  Signature.v  Simulates.v  SimulatesFacts.v  SingConds.v  Specification.v  Specs.v  Syntax.v  SyntaxLemmas.v  Tensor.v  TensorFacts.v  Traces.v  TracesFacts.v  Transition.v  UBLayer.v  VCompFacts.v  VisPoss.v  WeakestPrec.v  WkPre.v  dune
Examples/: Array.v  ArraySpec.v  AtomicCounter.v  AtomicCounterSpec.v  AtomicSpec.v  AtomicStackSpec.v  BatchedCounterSpec.v  CASSpec.v  CellSpec.v  CounterSpec.v  CounterSpecs.v  EBLin.v  EBStack.v  ElimArray.v  Exchanger.v  ExchangerSpec.v  FAISpec.v  LocalVarSpec.v  Lock.v  LockAround.v  LockSpec.v  MRSWCellSpec.v  MemSpec.v  NameSpec.v  OMemSpec.v  RacyCounter.v  RacyCounterSpec.v  RandomSpec.v  RegSpec.v  Snapshot.v  SnapshotSpec.v  SpinLock.v  ThreadLocal.v  TicketLock.v  VarSpec.v  WaitFreeStack.v  WaitFreeStackSpec.v  WkSpec.v  WriteSnapshot.v  WriteSnapshotSpec.v  (+1 more)
Facts/: Linearizability.v  Refinement.v  dune
OldCore/: Eutt.v  EuttRefinesSetup.v  LogicPaco.v  Program.v  ProgramFacts.v  ProgramRules.v  Tensor.v  TensorFacts.v  Traces.v  VisPoss.v
OldUtil/: Tactics.v
Util/: AtomicUtil.v  Axioms.v  DecEq.v  Heap.v  Map.v  (+6 more)
(+22 files in other folders)
